--- a/index.html
+++ b/index.html
@@ -111,39 +111,53 @@
     </div>
   </div>
 </section>
-    <footer class="bgDark">
-      <div class="container">
-        <img src="./assets/img/CREEDWHITE.png" class="logo-brand" alt="logo" />
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a href="#"
-              ><img src="./assets/img/instagram.svg" class="img-fluid"
-            /></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#"
-              ><img src="./assets/img/twitter.svg" class="img-fluid"
-            /></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#"
-              ><img src="./assets/img/youtube.svg" class="img-fluid"
-            /></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#"
-              ><img src="./assets/img/facebook.svg" class="img-fluid"
-            /></a>
-          </li>
-        </ul>
-        <small class="small-footer"
-          >©2022 Todos los Derechos Reservados. Creado por
-          <a class="font-weight-bold" target="_blank" rel="noopener">
-            JB</a
-          ></small
-        >
-      </div>
-    </footer>
+<footer
+class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center"
+>
+<img
+  class="footer-logo"
+  src="./assets/img/CREEDWHITE.png"
+  alt="logo de project"
+/>
+<p class="footer-texto text-center">
+  Aprendo y creo todos los dias.<br />
+</p>
+<div
+  class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-connten-center"
+>
+  <a
+    href="https://twitter.com"
+    target="_blansk"
+    rel="noopener noreferrer"
+  >
+    <i class="bi bi-twitter"></i>
+  </a>
+  <a
+    href="https://facebook.com"
+    target="_blansk"
+    rel="noopener noreferrer"
+  >
+    <i class="bi bi-facebook"></i>
+  </a>
+  <a
+    href="https://instagram.com"
+    target="_blansk"
+    rel="noopener noreferrer"
+  >
+    <i class="bi bi-instagram"></i>
+  </a>
+  <a
+    href="mailto:jorge.a.saavedra@gmail.com"
+    target="_blansk"
+    rel="noopener noreferrer"
+  >
+    <i class="bi bi-envelope"></i>
+  </a>
+</div>
+<div class="derecho-de-autor">
+  Todos los Derechos Reservados. Creado por JB 2022 &#169;
+</div>
+</footer>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
