--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -60,9 +60,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./actividades.html"
-                  >Actividades</a
-                >
+                <a class="nav-link" href="./actividades.html">Actividades</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./quienesSomos.html"
@@ -80,128 +78,144 @@
         </div>
       </nav>
     </header>
-    <table
-      border="3px"
-      cellpadding="5px"
-      cellspacing="10px"
-      align="center"
-      class="center-col"
+
+    <!-- table -->
+    <div id="actividades" class="actividades">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Horarios</th>
+            <th scope="col">Lunes</th>
+            <th scope="col">Martes</th>
+            <th scope="col">Miercoles</th>
+            <th scope="col">Jueves</th>
+            <th scope="col">Viernes</th>
+            <th scope="col">Sabados</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>10:00</td>
+          <td>HIITS</td>
+          <td>STRONG</td>
+          <td>FUNCIONAL</td>
+          <td>STRONG</td>
+          <td>STRONG</td>
+          <td>HIITS</td>
+        </tr>
+        <tr>
+          <td>11:30</td>
+          <td>FUNCIONAL</td>
+          <td>FUNCIONAL</td>
+          <td>HIITS</td>
+          <td>ZUMBA</td>
+          <td>BOXEO</td>
+          <td>STRONG</td>
+        </tr>
+        <tr>
+          <td>13:00</td>
+          <td>STRONG</td>
+          <td>STRONG</td>
+          <td>HIITS</td>
+          <td>ZUMBA</td>
+          <td>FUNCIONAL</td>
+          <td>CROSS</td>
+        </tr>
+        <tr>
+          <td>17:00</td>
+          <td>HIITS</td>
+          <td>ABS</td>
+          <td>STRONG</td>
+          <td>HIITS</td>
+          <td>FUNCIONAL</td>
+          <td>CROSS</td>
+        </tr>
+        <tr>
+          <td>18:30</td>
+          <td>ABS</td>
+          <td>ABS</td>
+          <td>STRONG</td>
+          <td>ABS</td>
+          <td>HIITS</td>
+          <td>HIITS</td>
+        </tr>
+        <tr>
+          <td>20:00</td>
+          <td>ABS</td>
+          <td>ABS</td>
+          <td>ABS</td>
+          <td>ABS</td>
+          <td>FUNCIONAL</td>
+          <td>CROSS</td>
+        </tr>
+        <tr>
+          <td>21:00</td>
+          <td>ABS</td>
+          <td>ABS</td>
+          <td>HIITS</td>
+          <td>STRONG</td>
+          <td>FUNCIONAL</td>
+          <td>HIITS</td>
+        </tr>
+        <tr>
+          <td>22:30</td>
+          <td>STRONG</td>
+          <td>ZUMBA</td>
+          <td>FUNCIONAL</td>
+          <td>FUNCIONAL</td>
+          <td>BOXEO</td>
+          <td>CROSS</td>
+        </tr>
+      </tbody>
+      </table>
+    </div>
+    <footer
+    class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center"
+  >
+    <img
+      class="footer-logo"
+      src="../assets/img/CREEDWHITE.png"
+      alt="logo de project"
+    />
+    <p class="footer-texto text-center">
+      Aprendo y creo todos los dias.<br />
+    </p>
+    <div
+      class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-connten-center"
     >
-      <tr>
-        <th>Horarios</th>
-        <th>Lunes</th>
-        <th>Martes</th>
-        <th>Miercoles</th>
-        <th>Jueves</th>
-        <th>Viernes</th>
-        <th>Sabados</th>
-      </tr>
-      <tr>
-        <td>10:00</td>
-        <td>HIITS</td>
-        <td>STRONG</td>
-        <td>FUNCIONAL</td>
-        <td>STRONG</td>
-        <td>STRONG</td>
-        <td>fila 1 - columna 3</td>
-      </tr>
-      <tr>
-        <td>11:30</td>
-        <td>FUNCIONAL</td>
-        <td>FUNCIONAL</td>
-        <td>HIITS</td>
-        <td>ZUMBA</td>
-        <td>BOXEO</td>
-        <td>STRONG</td>
-      </tr>
-      <tr>
-        <td>13:00</td>
-        <td>STRONG</td>
-        <td>STRONG</td>
-        <td>HIITS</td>
-        <td>ZUMBA</td>
-        <td>FUNCIONAL</td>
-        <td>CROSS</td>
-      </tr>
-      <tr>
-        <td>17:00</td>
-        <td>HIITS</td>
-        <td>ABS</td>
-        <td>STRONG</td>
-        <td>HIITS</td>
-        <td>FUNCIONAL</td>
-        <td>CROSS</td>
-      </tr>
-      <tr>
-        <td>18:30</td>
-        <td>ABS</td>
-        <td>ABS</td>
-        <td>STRONG</td>
-        <td>ABS</td>
-        <td>HIITS</td>
-        <td>HIITS</td>
-      </tr>
-      <tr>
-        <td>20:00</td>
-        <td>ABS</td>
-        <td>ABS</td>
-        <td>ABS</td>
-        <td>ABS</td>
-        <td>FUNCIONAL</td>
-        <td>CROSS</td>
-      </tr>
-      <tr>
-        <td>21:00</td>
-        <td>ABS</td>
-        <td>ABS</td>
-        <td>HIITS</td>
-        <td>STRONG</td>
-        <td>FUNCIONAL</td>
-        <td>HIITS</td>
-      </tr>
-      <tr>
-        <td>22:30</td>
-        <td>STRONG</td>
-        <td>ZUMBA</td>
-        <td>FUNCIONAL</td>
-        <td>FUNCIONAL</td>
-        <td>BOXEO</td>
-        <td>CROSS</td>
-      </tr>
-    </table>
-    <footer class="bgDark">
-      <div class="container">
-        <img src="../assets/img/CREEDWHITE.png" class="logo-brand" alt="logo" />
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a href="#"
-              ><img src="../assets/img/instagram.svg" class="img-fluid"
-            /></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#"
-              ><img src="../assets/img/twitter.svg" class="img-fluid"
-            /></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#"
-              ><img src="../assets/img/youtube.svg" class="img-fluid"
-            /></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#"
-              ><img src="../assets/img/facebook.svg" class="img-fluid"
-            /></a>
-          </li>
-        </ul>
-        <small class="small-footer">
-          ©2022 Todos los Derechos Reservados. Creado por
-          <a class="font-weight-bold" target="_blank" rel="noopener">
-            JB</a
-          ></small
-        >
-      </div>
-    </footer>
+      <a
+        href="https://twitter.com/freecodecampES"
+        target="_blansk"
+        rel="noopener noreferrer"
+      >
+        <i class="bi bi-twitter"></i>
+      </a>
+      <a
+        href="https://facebook.com/freecodecampES"
+        target="_blansk"
+        rel="noopener noreferrer"
+      >
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a
+        href="https://instagram.com/freecodecampES"
+        target="_blansk"
+        rel="noopener noreferrer"
+      >
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a
+        href="mailto:jorge.a.saavedra@gmail.com"
+        target="_blansk"
+        rel="noopener noreferrer"
+      >
+        <i class="bi bi-envelope"></i>
+      </a>
+    </div>
+    <div class="derecho-de-autor">
+      Todos los Derechos Reservados. Creado por JB 2022 &#169;
+    </div>
+  </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
