--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Icon Boostrap -->
 
     <link
@@ -52,19 +53,27 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
+                <a
+                  class="nav-link mx-2 active"
+                  aria-current="page"
+                  href="./index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="./pages/actividades.html"
                   >Actividades</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="./pages/quienesSomos.html"
                   >Quienes Somos?</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="./pages/galeria.html">Galeria</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="./pages/contacto.html">Contacto</a>
               </li>
             </ul>
@@ -72,8 +81,8 @@
         </div>
       </nav>
     </header>
+    <main>
     <section class="parallax">
-      <main>
         <div class="container">
           <div class="content-center">
             <h1 style="color: aliceblue">Creed</h1>
@@ -87,8 +96,8 @@
             /></a>
           </div>
         </div>
-      </main>
-    </section>
+      </section>
+    </main>
 <!-- Section Contacto-->
 
 <section class="contacto seccion-oscura">
