--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
-    <link rel="stylesheet" href="../assets/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <!-- Icon Boostrap -->
 
     <link
@@ -51,28 +52,28 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a
-                  class="nav-link active"
+                  class="nav-link "
                   aria-current="page"
                   href="../index.html"
                   >Inicio</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="./actividades.html"
                   >Actividades</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./quienesSomos.html"
+              <li class="nav-item mx-2">
+                <a class="nav-link active" href="./quienesSomos.html"
                   >Quienes Somos?</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="./galeria.html">Galeria</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>
             </ul>
