--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -1,102 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
   <!-- Metadatos -->
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- CSS only -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-    crossorigin="anonymous"
-  />
-  
-  <link rel="stylesheet" href="../assets/css/style.css" />
-  <!-- Icon Boostrap -->
 
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-  />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
   <!-- Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Quicksand&family=Rubik+Dirt&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Rubik+Dirt&display=swap" rel="stylesheet" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <!-- Icon Boostrap -->
   <!-- Title -->
   <title>Creed</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-light navbar-light py-3">
-        <div class="container">
-          <img
-            src="../assets/img/CREEDWHITE.png"
-            class="w-10 img-fluid d-none d-sm-block"
-            alt="logo-creed"
-          />
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item mx-2">
-                <a
-                  class="nav-link "
-                  aria-current="page"
-                  href="../index.html"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="./actividades.html"
-                  >Actividades</a
-                >
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="./quienesSomos.html"
-                  >Quienes Somos?</a
-                >
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link active" href="./galeria.html">Galeria</a>
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light navbar-light py-3">
+      <div class="container">
+        <img src="../assets/img/CREEDWHITE.png" class="w-10 img-fluid d-none d-sm-block" alt="logo-creed" />
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item mx-2">
+              <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="./actividades.html">Actividades</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="./quienesSomos.html">Quienes Somos?</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link active" href="./galeria.html">Galeria</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <section id="galeria" class="container">
-      <div class="text-center pt-5">
-        <h1>Galeria</h1>
-        <legend>Ustedes en acción</legend>
       </div>
-      <div
-        id="carouselExampleIndicators"
-        class="carousel slide"
-        data-ride="carousel"
-      >
+    </nav>
+  </header>
+
+  <section id="galeria" class="container">
+    <div class="text-center pt-5">
+      <h1>Galeria</h1>
+      <legend>Ustedes en acción</legend>
+    </div>
+
+    <div class="container-fluid d-flex justify-content-center">
+      <div id="carouselExampleIndicators" class="carousel slide w-50" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li
-            data-target="#carouselExampleIndicators"
-            data-slide-to="0"
-            class="active"
-          ></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
@@ -104,113 +71,56 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              src="../assets/img/pexels-cottonbro-4761661.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="../assets/img/pexels-cottonbro-4761661.jpg" class="d-block w-100 " alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="../assets/img/pexels-cottonbro-4761792.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="../assets/img/pexels-cottonbro-4761792.jpg" class="d-block w-100 " alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="../assets/img/pexels-cottonbro-4761616.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="../assets/img/pexels-cottonbro-4761616.jpg" class="d-block w-100 " alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="../assets/img/pexels-cottonbro-7674484.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="../assets/img/pexels-cottonbro-7674484.jpg" class="d-block w-100 " alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="../assets/img/pexels-zakaria-boumliha-2827400.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="../assets/img/pexels-zakaria-boumliha-2827400.jpg" class="d-block w-100 " alt="..." />
           </div>
         </div>
-        <a
-          class="carousel-control-prev"
-          href="#carouselExampleIndicators"
-          role="button"
-          data-slide="prev"
-        >
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only"></span>
         </a>
-        <a
-          class="carousel-control-next"
-          href="#carouselExampleIndicators"
-          role="button"
-          data-slide="next"
-        >
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only"></span>
         </a>
       </div>
-    </section>
-    <div class="text-center">
-      <h2>Como preparamos nuestro entrenamiento *Ideal*</h2>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/nXidfXJ5FmM"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
     </div>
-    <footer
-    class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center"
-  >
-    <img
-      class="footer-logo"
-      src="../assets/img/CREEDWHITE.png"
-      alt="logo de project"
-    />
+  </section>
+
+  <section class="text-center">
+    <h2>Como preparamos nuestro entrenamiento *Ideal*</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nXidfXJ5FmM" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </section>
+
+  <footer class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center">
+    <img class="footer-logo" src="../assets/img/CREEDWHITE.png" alt="logo de project" />
     <p class="footer-texto text-center">
       Aprendo y creo todos los dias.<br />
     </p>
-    <div
-      class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-connten-center"
-    >
-      <a
-        href="https://twitter.com/freecodecampES"
-        target="_blansk"
-        rel="noopener noreferrer"
-      >
+    <div class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-connten-center">
+      <a href="https://twitter.com/freecodecampES" target="_blansk" rel="noopener noreferrer">
         <i class="bi bi-twitter"></i>
       </a>
-      <a
-        href="https://facebook.com/freecodecampES"
-        target="_blansk"
-        rel="noopener noreferrer"
-      >
+      <a href="https://facebook.com/freecodecampES" target="_blansk" rel="noopener noreferrer">
         <i class="bi bi-facebook"></i>
       </a>
-      <a
-        href="https://instagram.com/freecodecampES"
-        target="_blansk"
-        rel="noopener noreferrer"
-      >
+      <a href="https://instagram.com/freecodecampES" target="_blansk" rel="noopener noreferrer">
         <i class="bi bi-instagram"></i>
       </a>
-      <a
-        href="mailto:jorge.a.saavedra@gmail.com"
-        target="_blansk"
-        rel="noopener noreferrer"
-      >
+      <a href="mailto:jorge.a.saavedra@gmail.com" target="_blansk" rel="noopener noreferrer">
         <i class="bi bi-envelope"></i>
       </a>
     </div>
@@ -218,27 +128,22 @@
       Todos los Derechos Reservados. Creado por JB 2022 &#169;
     </div>
   </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
