--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="descripcion" 
+      content="gimnasio con guia de entrenamientos en todos los ambientes para sacar el maximo potencial"
+    />
+    <meta name="keyboards" content="gimnasio boxeo crossfit argentina buenos aires la plata"/>
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
