--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,6 +6,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="descripcion" 
+  content="gimnasio con guia de entrenamientos en todos los ambientes para sacar el maximo potencial"
+/>
+<meta name="keyboards" content="gimnasio boxeo crossfit argentina buenos aires la plata"/>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
   <!-- Google Fonts-->
