--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
     />
     <!-- Title -->
-    <title>Creed</title>
+    <title>Creed Actividades</title>
   </head>
   <body>
     <header>
