--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="../assets/scss/style.css" />
   <!-- Icon Boostrap -->
   <!-- Title -->
-  <title>Creed</title>
+  <title>Creed Galeria</title>
 </head>
 
 <body>
