--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
 />
 <meta name="keyboards" content="gimnasio boxeo crossfit argentina buenos aires la plata"/>
   <!-- Title -->
-  <title>Creed</title>
+  <title>Creed contacto</title>
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
