--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
     />
     <!-- Title -->
-    <title>Creed</title>
+    <title>Creed Quienes somos?</title>
   </head>
   <body>
     <header>
