add description in tag alts

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               href="./pages/contacto.html"
               class="btn btn-secondary mt-4"
               >Iniciar Ahora
-              <img src="./assets/img/arrow-right.svg" class="ml-2"
+              <img src="./assets/img/arrow-right.svg" class="ml-2" alt="icono play"
             /></a>
           </div>
         </div>
@@ -126,7 +126,7 @@ class="seccion-oscura d-flex flex-colum aling-items-center justify-content-cente
 <img
   class="footer-logo"
   src="./assets/img/CREEDWHITE.png"
-  alt="logo de project"
+  alt="logo de project en el footer"
 />
 <p class="footer-texto text-center">
   Aprendo y creo todos los dias.<br />
