--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -180,7 +180,7 @@
     <img
       class="footer-logo"
       src="../assets/img/CREEDWHITE.png"
-      alt="logo de project"
+      alt="logo de actividades en el footer"
     />
     <p class="footer-texto text-center">
       Aprendo y creo todos los dias.<br />
