--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -145,7 +145,7 @@
       <img
         class="footer-logo"
         src="../assets/img/CREEDWHITE.png"
-        alt="logo de project"
+        alt="logo de quienes somos? en el footer"
       />
       <p class="footer-texto text-center">
         Aprendo y creo todos los dias.<br />
