--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -87,7 +87,7 @@
   </section>
 
   <footer class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center">
-    <img class="footer-logo" src="../assets/img/CREEDWHITE.png" alt="logo de project" />
+    <img class="footer-logo" src="../assets/img/CREEDWHITE.png" alt="logo de contacto en el footer" />
     <p class="footer-texto text-center">
       Aprendo y creo todos los dias.<br />
     </p>
