--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -75,19 +75,19 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/img/pexels-cottonbro-4761661.jpg" class="d-block w-100 " alt="..." />
+            <img src="../assets/img/pexels-cottonbro-4761661.jpg" class="d-block w-100 " alt="Boxeador en blanco y negro tirando y golpe" />
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/pexels-cottonbro-4761792.jpg" class="d-block w-100 " alt="..." />
+            <img src="../assets/img/pexels-cottonbro-4761792.jpg" class="d-block w-100 " alt="Boxeador descansando y sacandose los guantes" />
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/pexels-cottonbro-4761616.jpg" class="d-block w-100 " alt="..." />
+            <img src="../assets/img/pexels-cottonbro-4761616.jpg" class="d-block w-100 " alt="Ring de boxeo, de fondo se ve la sobra del boxeador" />
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/pexels-cottonbro-7674484.jpg" class="d-block w-100 " alt="..." />
+            <img src="../assets/img/pexels-cottonbro-7674484.jpg" class="d-block w-100 " alt="Mujer colgada de las anillas crossfit" />
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/pexels-zakaria-boumliha-2827400.jpg" class="d-block w-100 " alt="..." />
+            <img src="../assets/img/pexels-zakaria-boumliha-2827400.jpg" class="d-block w-100 " alt="Hombre haciendo un salto con una pelota de algunos kilos" />
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -110,7 +110,7 @@
   </section>
 
   <footer class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center">
-    <img class="footer-logo" src="../assets/img/CREEDWHITE.png" alt="logo de project" />
+    <img class="footer-logo" src="../assets/img/CREEDWHITE.png" alt="logo de galeria en el footer" />
     <p class="footer-texto text-center">
       Aprendo y creo todos los dias.<br />
     </p>
