Update css actividades

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -83,8 +83,6 @@
         </div>
       </nav>
     </header>
-
-    <!-- table -->
     <div id="actividades" class="actividades">
       <table class="table">
         <thead>
@@ -186,7 +184,7 @@
       Aprendo y creo todos los dias.<br />
     </p>
     <div
-      class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-connten-center"
+      class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-content-center"
     >
       <a
         href="https://twitter.com/freecodecampES"
