--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -151,7 +151,7 @@
         Aprendo y creo todos los dias.<br />
       </p>
       <div
-        class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-connten-center"
+        class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-conten-center"
       >
         <a
           href="https://twitter.com/freecodecampES"
