--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -146,7 +146,7 @@
     <!-- Footer -->
 
     <footer
-      class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center"
+      class="seccion-oscura d-flex flex-wrap aling-items-center justify-content-center"
     >
       <img
         class="footer-logo"
