--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </div>
 </section>
 <footer
-class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center"
+class="seccion-oscura d-flex flex-wrap aling-items-center justify-content-center"
 >
 <img
   class="footer-logo"
