--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -177,7 +177,7 @@
       </table>
     </div>
     <footer
-    class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center"
+    class="seccion-oscura d-flex flex-wrap aling-items-center justify-content-center"
   >
     <img
       class="footer-logo"
