--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,7 +108,7 @@
     </div>
   </section>
 
-  <footer class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center">
+  <footer class="seccion-oscura d-flex flex-wrap aling-items-center justify-content-center">
     <img class="footer-logo" src="../assets/img/CREEDWHITE.png" alt="logo de contacto en el footer" />
     <p class="footer-texto text-center">
       Aprendo y creo todos los dias.<br />
