--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -131,7 +131,7 @@
       allowfullscreen></iframe>
   </section>
 
-  <footer class="seccion-oscura d-flex flex-colum aling-items-center justify-content-center">
+  <footer class="seccion-oscura d-flex flex-wrap aling-items-center justify-content-center">
     <img class="footer-logo" src="../assets/img/CREEDWHITE.png" alt="logo de galeria en el footer" />
     <p class="footer-texto text-center">
       Aprendo y creo todos los dias.<br />
