--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
       </section>
 <!-- Section Contacto-->
 
-<section class="contacto seccion-oscura">
+<section class="contacto seccion-oscura container rectangulo">
     <div class="container text-center rectangulo d-flex justify-content-evenly">
       <div class="row">
-        <div class="col-12 col-md4 seccion-title">¡Hablemos!</div>
+        <div class="col-12 col-md seccion-title">¡Hablemos!</div>
         <div class="col-12 col-md seccion-description">
           Contáctame para iniciar tu inscripción!
         </div>
         <div class="col-12 col-md-4 seccion-email">
           <a href="mailto:jorgesaavedraalejandro12@gmail.com">
-            <button type="button">
+            <button type="button" class="btn-contacto">
               Contacto
               <i class="bi bi-envelope-check-fill"></i>
             </button>
